--- a/ui/agregar-registros.ui
+++ b/ui/agregar-registros.ui
@@ -1,43 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
- <widget class="QWidget" name="Form">
+ <class>Dialog</class>
+ <widget class="QDialog" name="Dialog">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1440</width>
-    <height>847</height>
+    <width>927</width>
+    <height>877</height>
    </rect>
   </property>
-  <property name="sizePolicy">
-   <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-    <horstretch>0</horstretch>
-    <verstretch>0</verstretch>
-   </sizepolicy>
-  </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Dialog</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <property name="leftMargin">
-    <number>100</number>
-   </property>
-   <property name="topMargin">
-    <number>12</number>
-   </property>
-   <property name="rightMargin">
-    <number>100</number>
-   </property>
-   <item row="0" column="0">
-    <layout class="QVBoxLayout" name="verticalLayout_7">
+  <property name="styleSheet">
+   <string notr="true">QDialog {
+ background-color:rgb(255, 253, 225);
+
+}</string>
+  </property>
+  <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,1,0,0">
+   <item>
+    <spacer name="verticalSpacer_9">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>847</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
+    <spacer name="horizontalSpacer_3">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
+    <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,0,1,0,1,0">
      <item>
-      <spacer name="verticalSpacer_3">
+      <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeType">
-        <enum>QSizePolicy::Minimum</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
@@ -48,257 +62,52 @@
       </spacer>
      </item>
      <item>
-      <widget class="QLabel" name="label">
-       <property name="font">
-        <font>
-         <pointsize>22</pointsize>
-         <weight>75</weight>
-         <bold>true</bold>
-        </font>
-       </property>
+      <widget class="QLabel" name="label_tabla">
        <property name="styleSheet">
-        <string notr="true">color: rgb(141, 110, 58);</string>
+        <string notr="true">font: 12pt &quot;Arial Rounded MT Bold&quot;;
+color: rgb(141, 110, 58);</string>
        </property>
        <property name="text">
-        <string>Agregar Registro</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
+        <string>Tabla</string>
        </property>
       </widget>
      </item>
      <item>
-      <layout class="QVBoxLayout" name="verticalLayout_4"/>
+      <widget class="QComboBox" name="tablaslist">
+       <property name="styleSheet">
+        <string notr="true">QComboBox{
+border: 1px solid #95753d;
+background-color: #white;
+font: 75 11pt &quot;MS Shell Dlg 2&quot;;
+color: rgb(149, 117, 61);
+}</string>
+       </property>
+      </widget>
      </item>
      <item>
-      <spacer name="verticalSpacer_2">
+      <spacer name="horizontalSpacer">
        <property name="orientation">
-        <enum>Qt::Vertical</enum>
+        <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
-         <width>20</width>
-         <height>40</height>
+         <width>40</width>
+         <height>20</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="1,2">
        <item>
-        <layout class="QVBoxLayout" name="verticalLayout_2">
-         <item>
-          <widget class="QLabel" name="label_id">
-           <property name="font">
-            <font>
-             <family>Arial Rounded MT Bold</family>
-             <pointsize>16</pointsize>
-             <weight>50</weight>
-             <italic>false</italic>
-             <bold>false</bold>
-            </font>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">font: 16pt &quot;Arial Rounded MT Bold&quot;;
-color: rgb(141, 110, 58);</string>
-           </property>
-           <property name="text">
-            <string>ID</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLineEdit" name="lineEdit">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">QLineEdit {
-border-radius: 6px;
-border: 1px solid #d3c393;
-background-color: white;
-color:  #95753d;
-height: 20px;
-}</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="label_5">
-           <property name="styleSheet">
-            <string notr="true">font: 16pt &quot;Arial Rounded MT Bold&quot;;
-color: rgb(141, 110, 58);</string>
-           </property>
-           <property name="text">
-            <string>Input</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLineEdit" name="lineEdit_3">
-           <property name="styleSheet">
-            <string notr="true">QLineEdit {
-border-radius: 6px;
-border: 1px solid #d3c393;
-background-color: white;
-color:  #95753d;
-height: 20px;
-}</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="label_6">
-           <property name="font">
-            <font>
-             <family>Arial Rounded MT</family>
-             <pointsize>14</pointsize>
-             <weight>50</weight>
-             <italic>false</italic>
-             <bold>false</bold>
-            </font>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">font: 14pt &quot;Arial Rounded MT&quot;;
-color: rgb(141, 110, 58);</string>
-           </property>
-           <property name="text">
-            <string>Your password is between 4 and 12 characters</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="label_9">
-           <property name="styleSheet">
-            <string notr="true">font: 16pt &quot;Arial Rounded MT Bold&quot;;
-color: rgb(141, 110, 58);</string>
-           </property>
-           <property name="text">
-            <string>Input</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLineEdit" name="lineEdit_5">
-           <property name="styleSheet">
-            <string notr="true">QLineEdit {
-border-radius: 6px;
-border: 1px solid #d3c393;
-background-color: white;
-color:  #95753d;
-height: 20px;
-}</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
+        <widget class="QLabel" name="label_iconousuario">
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
        </item>
        <item>
-        <spacer name="horizontalSpacer">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeType">
-          <enum>QSizePolicy::Fixed</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>100</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item>
-        <layout class="QVBoxLayout" name="verticalLayout">
-         <item>
-          <widget class="QLabel" name="label_4">
-           <property name="font">
-            <font>
-             <family>Arial Rounded MT Bold</family>
-             <pointsize>16</pointsize>
-             <weight>50</weight>
-             <italic>false</italic>
-             <bold>false</bold>
-            </font>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">font: 16pt &quot;Arial Rounded MT Bold&quot;;
-color: rgb(141, 110, 58);</string>
-           </property>
-           <property name="text">
-            <string>Input</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLineEdit" name="lineEdit_2">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">QLineEdit {
-border-radius: 6px;
-border: 1px solid #d3c393;
-background-color: white;
-color:  #95753d;
-height: 20px;
-}</string>
-           </property>
-           <property name="maxLength">
-            <number>2000</number>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="label_7">
-           <property name="styleSheet">
-            <string notr="true">font: 16pt &quot;Arial Rounded MT Bold&quot;;
-color: rgb(141, 110, 58);</string>
-           </property>
-           <property name="text">
-            <string>Input Text Label</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLineEdit" name="lineEdit_4">
-           <property name="styleSheet">
-            <string notr="true">QLineEdit {
-border-radius: 6px;
-border: 1px solid #d3c393;
-background-color: white;
-color:  #95753d;
-height: 20px;
-}</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="label_8">
-           <property name="styleSheet">
-            <string notr="true">font: 16pt &quot;Arial Rounded MT Bold&quot;;
-color: rgb(141, 110, 58);</string>
-           </property>
-           <property name="text">
-            <string>Error message informing me of a problem</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <layout class="QVBoxLayout" name="verticalLayout_3">
-       <item>
-        <spacer name="verticalSpacer">
+        <spacer name="verticalSpacer_20">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
@@ -313,22 +122,57 @@ color: rgb(141, 110, 58);</string>
       </layout>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_4">
-       <item>
-        <widget class="QPushButton" name="button_cancel">
-         <property name="font">
-          <font>
-           <pointsize>14</pointsize>
-          </font>
+      <layout class="QGridLayout" name="gridLayout">
+       <item row="0" column="1">
+        <widget class="QLabel" name="label_acceso">
+         <property name="styleSheet">
+          <string notr="true">font: 12pt &quot;Arial Rounded MT Bold&quot;;
+color: rgb(141, 110, 58);</string>
          </property>
+         <property name="text">
+          <string>Columnas</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="2,0,0">
+       <item>
+        <spacer name="verticalSpacer_17">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton_cancelar">
          <property name="styleSheet">
           <string notr="true">QPushButton {
 border-radius: 6px;
-border: 2px solid #95753d;
-background-color: white;
-color: #95753d;
+border: 3px solid #95753d;
+background-color: #95753d;
+color: white;
 height: 25px;
-padding: 2px 10px;
 }
 
 QPushButton:hover {
@@ -350,25 +194,7 @@ QPushButton:pressed {
         </widget>
        </item>
        <item>
-        <spacer name="horizontalSpacer_8">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item>
-        <widget class="QPushButton" name="button_guardar">
-         <property name="font">
-          <font>
-           <pointsize>14</pointsize>
-          </font>
-         </property>
+        <widget class="QPushButton" name="pushButton_confirmar">
          <property name="styleSheet">
           <string notr="true">QPushButton {
 border-radius: 6px;
@@ -376,7 +202,6 @@ border: 3px solid #95753d;
 background-color: #95753d;
 color: white;
 height: 25px;
-padding: 2px 10px;
 }
 
 QPushButton:hover {
@@ -393,13 +218,39 @@ QPushButton:pressed {
 }</string>
          </property>
          <property name="text">
-          <string> Guardar</string>
+          <string>Confirmar</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
+   </item>
+   <item>
+    <spacer name="horizontalSpacer_4">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
+    <spacer name="verticalSpacer_16">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>847</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
