--- a/ui/agregar-registros.ui
+++ b/ui/agregar-registros.ui
@@ -150,7 +150,7 @@ color: rgb(141, 110, 58);</string>
       </spacer>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="2,0,0">
+      <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="2,0,0,0">
        <item>
         <spacer name="verticalSpacer_17">
          <property name="orientation">
@@ -163,6 +163,19 @@ color: rgb(141, 110, 58);</string>
           </size>
          </property>
         </spacer>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_exito">
+         <property name="styleSheet">
+          <string notr="true">QLabel {
+               font: 12pt;
+               color: green;
+               }</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
        </item>
        <item>
         <widget class="QPushButton" name="pushButton_cancelar">
