--- a/ui/ver-tabla.ui
+++ b/ui/ver-tabla.ui
@@ -59,36 +59,14 @@ QPushButton:pressed {
       </spacer>
      </item>
      <item>
-      <widget class="QLineEdit" name="line_edit_busqueda_presupuesto"/>
+      <widget class="QLineEdit" name="line_edit_busqueda_presupuesto">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+      </widget>
      </item>
      <item>
-      <widget class="QComboBox" name="comboBox_busqueda_presupuesto">
-       <item>
-        <property name="text">
-         <string/>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>no_escritura</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>proyectista</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>nombre cliente</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>no_presupuesto</string>
-        </property>
-       </item>
-      </widget>
+      <widget class="QComboBox" name="comboBox_busqueda_presupuesto"/>
      </item>
      <item>
       <spacer name="horizontalSpacer_2">
